--- a/html/register.html
+++ b/html/register.html
@@ -18,7 +18,7 @@
           </div>
           <div class="nav__action__btn">
               <button class="btn">
-                <span><i class="ri-user-line"></i></span> Account
+                <span><i class="ri-user-line"></i></span> Test
               </button>
           </div>
         </div>
