--- a/html/register.html
+++ b/html/register.html
@@ -11,7 +11,7 @@
     <nav>
         <div class="nav__bar">
           <div class="logo nav__logo">
-            <a href="index.html">nephelometer</a>
+            <a href="../index.html">nephelometer</a>
           </div>
           <div class="nav__menu__btn" id="menu-btn">
             <i class="ri-menu-line"></i>
