--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
             <li><a href="#footer">About Us</a></li>
           </ul>
           <div class="nav__menu__btn" id="menu-btn">
-            <i class="ri-menu-line"></i>
+            <i class="fa-solid fa-bars"></i>
           </div>
           <div class="nav__action__btn">
             <a href="./html/register.html"
               ><button class="btn">
-                <span><i class="ri-user-line"></i></span> Account
+                <span><i class="fa-solid fa-user"></i></span> Account
               </button></a
             >
           </div>
@@ -50,14 +50,14 @@
           <div class="scroll__btn">
             <a href="#blog">
               Scroll down
-              <span><i class="ri-arrow-down-line"></i></span>
+              <span><i class="fa-solid fa-arrow-down"></i></span>
             </a>
           </div>
         </div>
         <div class="header__socials">
           <span>Follow us</span>
-          <a href="#"><i class="ri-instagram-line"></i></a>
-          <a href="#"><i class="ri-twitter-fill"></i></a>
+          <a href="#"><i class="fa-brands fa-instagram"></i></a>
+          <a href="#"><i class="fa-brands fa-twitter"></i></a>
         </div>
       </div>
     </header>
@@ -80,7 +80,7 @@
           <div class="about__btn">
             <a href="#">
               Read more
-              <span><i class="ri-arrow-right-line"></i></span>
+              <span><i class="fa-solid fa-arrow-right"></i></span>
             </a>
           </div>
         </div>
@@ -101,7 +101,7 @@
           <div class="about__btn">
             <a href="#">
               Read more
-              <span><i class="ri-arrow-right-line"></i></span>
+              <span><i class="fa-solid fa-arrow-right"></i></span>
             </a>
           </div>
         </div>
@@ -121,7 +121,7 @@
           <div class="about__btn">
             <a href="#">
               Read more
-              <span><i class="ri-arrow-right-line"></i></span>
+              <span><i class="fa-solid fa-arrow-right"></i></span>
             </a>
           </div>
         </div>
