--- a/index.html
+++ b/index.html
@@ -5,13 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css"
-      rel="stylesheet"/>
-    <link rel="stylesheet" href="./css/styles.css" />
+      rel="stylesheet"
+    />
+
     <title>nephelometer</title>
-    <script src="https://kit.fontawesome.com/a64131ba24.js" crossorigin="anonymous"></script>
-
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://kit.fontawesome.com/a64131ba24.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="./css/index.css" />
   </head>
-
   <body>
     <div class="scrollup__btn">
       <a href="#">
@@ -36,7 +45,7 @@
           </div>
           <div class="nav__action__btn">
             <a href="./html/register.html"
-              ><button class="btn">
+              ><button class="nav__action btn">
                 <span><i class="fa-solid fa-user"></i></span> Account
               </button></a
             >
@@ -128,6 +137,31 @@
       </div>
     </section>
 
+    <section class="feedback" id="feedback">
+      <div class="form-feedback">
+        <label for="exampleFormControlInput1" class="form-label"
+          >Email address</label
+        >
+        <input
+          type="email"
+          class="form-control"
+          id="exampleFormControlInput1"
+          placeholder="Type in email"
+        />
+      </div>
+      <div class="form-feedback">
+        <label for="exampleFormControlTextarea1" class="form-label"
+          >Client's feedback</label
+        >
+        <textarea
+          class="form-control"
+          id="exampleFormControlTextarea1"
+          rows="3"
+        ></textarea>
+      </div>
+      <div class="submit_btn"><button class="btn">Submit</button></div> 
+    </section>
+
     <section class="footer" id="footer">
       <footer class="footer">
         <div class="section__container footer__container">
@@ -164,6 +198,6 @@
       </footer>
     </section>
     <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="./js/main.js"></script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
