--- a/html/register.html
+++ b/html/register.html
@@ -95,7 +95,7 @@
       </div>
     </div>
 
-    <script src="../js/register.js"></script>
+    <script src="../js/warpper.js"></script>
     <script src="../js/registation.js"></script>
   </body>
 </html>
