name fixed and button register style

--- a/index.html
+++ b/index.html
@@ -138,20 +138,9 @@
 
     <section class="feedback" id="feedback">
       <div class="form-feedback">
-        <label for="exampleFormControlInput1" class="form-label"
-          >Email address</label
-        >
-        <input
-          type="email"
-          class="form-control"
-          id="exampleFormControlInput1"
-          placeholder="Type in email"
-        />
-      </div>
-      <div class="form-feedback">
         <label for="exampleFormControlTextarea1" class="form-label"
-          >Client's feedback</label
-        >
+          >Client's feedback
+        </label>
         <textarea
           class="form-control"
           id="exampleFormControlTextarea1"
