--- a/html/register.html
+++ b/html/register.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>nephelometer_Register</title>
-    <link rel="stylesheet" href="../css/register.css" />
+    
     <script
       src="https://kit.fontawesome.com/a64131ba24.js"
       crossorigin="anonymous"
     ></script>
+
+    <link rel="stylesheet" href="../css/register.css" />
   </head>
   <body>
     <nav>
@@ -16,10 +18,7 @@
         <div class="logo nav__logo">
           <a href="../index.html">nephelometer</a>
         </div>
-        <div class="nav__menu__btn" id="menu-btn">
-          <i class="fa-solid fa-bars"></i>
-        </div>
-        <div class="nav__action__btn">
+        <div class="nav__action__btn btn">
           <button class="btn__user">
             <span><i class="fa-solid fa-user"></i></span>Register
           </button>
@@ -95,7 +94,7 @@
       </div>
     </div>
 
-    <script src="../js/warpper.js"></script>
+    <script src="../js/wrapper.js"></script>
     <script src="../js/registation.js"></script>
   </body>
 </html>
