--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             <a href="#">nephelometer</a>
           </div>
           <ul class="nav__links" id="nav-links">
-            <li><a href="#welcome">Welcome</a></li>
-            <li><a href="#blog">Blog</a></li>
+            <li><a href="#more">Explore</a></li>
+            <li><a href="./html/blog.html">Blog</a></li>
             <li><a href="#footer">About Us</a></li>
           </ul>
           <div class="nav__menu__btn" id="menu-btn">
@@ -44,7 +44,7 @@
           </div>
           <div class="nav__action__btn">
             <a href="./html/register.html"
-              ><button class="nav__action btn">
+              ><button id="accountButton" class="nav__action btn" >
                 <span><i class="fa-solid fa-user"></i></span> Account
               </button></a
             >
@@ -71,9 +71,9 @@
     </header>
     
 
-    <section class="about">
+    <section class="about" id="more">
       <div class="section__container about__container">
-        <div class="about__image about__image-1" id="blog">
+        <div class="about__image about__image-1">
           <img src="./css/assets/about-1.jpg" alt="about" />
         </div>
         <div class="about__content about__content-1">
@@ -159,7 +159,7 @@
               <a href="#">nephelometer</a>
             </div>
             <p>
-              Get out there & discover your next slope, mountains & destination!
+              Get out there & discover your next destination!
             </p>
           </div>
           <div class="footer__col">
