--- a/html/blog.html
+++ b/html/blog.html
@@ -1,78 +1,215 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://kit.fontawesome.com/a64131ba24.js"
-      crossorigin="anonymous"
-    ></script>
-    <link
-      href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="../css/blog.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="../css/blog.css">
+
 </head>
 <body>
-    <nav>
-        <div class="navbar">
-          <div class="logo">
-            <a href="../index.html" class="logo">nephelometer</a>
+  <header>
+    <nav class = "navbar">
+      <div class = "container">
+        <a href = "../index.html" class = "navbar-brand">nephelometer</a>
+        <div class = "navbar-nav">
+          
+        </div>
+      </div>
+    </nav>
+    <div class = "banner">
+      <div class = "container">
+        <h1 class = "banner-title">
+          nephelometer
+        </h1>
+        <p>everything that you want to know about your next destination</p>
+        
+      </div>
+    </div>
+  </header>
+  <!-- end of header -->
+  
+  <!-- design -->
+  <section class = "design" id = "design">
+    <div class = "container">
+      <div class = "title">
+        <h2>Recent Blogs</h2>
+      </div>
+
+      <div class = "design-content">
+        <!-- item -->
+        <div class = "design-item">
+          <div class = "design-img">
+            <img src = "../css/assets/art-design-1.jpg" alt = "">
+            <span><i class = "far fa-heart"></i> 22</span>
+            <span>Art & Design</span>
           </div>
-          <div class="register">
-            <button class="btn__user">
-             <span><i class="fa-solid fa-user"></i></span> Register
-            </button>
+          <div class = "design-title">
+            <a href = "#">make an awesome art portfolio for college or university</a>
           </div>
         </div>
-      </nav>
-
-      <main>
-
-      </main>
-
-      <section class="footer" id="footer">
-        <footer class="footer">
-          <div class="section__container footer__container">
-            <div class="footer__col">
-              <div class="logo footer__logo">
-                <a href="#">nephelometer</a>
-              </div>
-              <p>
-                Get out there & discover your next destination! 
-              </p>
-            </div>
-            <div class="footer__col">
-              <h4>More on The Blog</h4>
-              <ul class="footer__links">
-                <li><a href="#">About The Creator</a></li>
-                <li><a href="#">Contributors & Writers</a></li>
-                <li><a href="#">Write For Us</a></li>
-                <li><a href="#">Contact Us</a></li>
-                <li><a href="#">Privacy Policy</a></li>
-              </ul>
-            </div>
-            <div class="footer__col">
-              <h4>More on nephelometer</h4>
-              <ul class="footer__links">
-                <li><a href="#">The Team</a></li>
-                <li><a href="#">Jobs</a></li>
-                <li><a href="#">Press</a></li>
-              </ul>
-            </div>
+        <!-- end of item -->
+        <!-- item -->
+        <div class = "design-item">
+          <div class = "design-img">
+            <img src = "../css/assets/art-design-2.jpg" alt = "">
+            <span><i class = "far fa-heart"></i> 22</span>
+            <span>Art & Design</span>
           </div>
-          <div class="footer__bar">
-            Copyright © 2024 Le Minh Tien. All rights reserved.
+          <div class = "design-title">
+            <a href = "#">make an awesome art portfolio for college or university</a>
           </div>
-        </footer>
-      </section>
-<script src="../js/blog.js"></script>
+        </div>
+        <!-- end of item -->
+        <!-- item -->
+        <div class = "design-item">
+          <div class = "design-img">
+            <img src = "../css/assets/art-design-3.jpg" alt = "">
+            <span><i class = "far fa-heart"></i> 22</span>
+            <span>Art & Design</span>
+          </div>
+          <div class = "design-title">
+            <a href = "#">make an awesome art portfolio for college or university</a>
+          </div>
+        </div>
+        <!-- end of item -->
+        <!-- item -->
+        <div class = "design-item">
+          <div class = "design-img">
+            <img src = "../css/assets/art-design-4.jpg" alt = "">
+            <span><i class = "far fa-heart"></i> 22</span>
+            <span>Art & Design</span>
+          </div>
+          <div class = "design-title">
+            <a href = "#">make an awesome art portfolio for college or university</a>
+          </div>
+        </div>
+        <!-- end of item -->
+        <!-- item -->
+        <div class = "design-item">
+          <div class = "design-img">
+            <img src = "../css/assets/art-design-5.jpg" alt = "">
+            <span><i class = "far fa-heart"></i> 22</span>
+            <span>Art & Design</span>
+          </div>
+          <div class = "design-title">
+            <a href = "#">make an awesome art portfolio for college or university</a>
+          </div>
+        </div>
+        <!-- end of item -->
+        <!-- item -->
+        <div class = "design-item">
+          <div class = "design-img">
+            <img src = "../css/assets/art-design-6.jpg" alt = "">
+            <span><i class = "far fa-heart"></i> 22</span>
+            <span>Art & Design</span>
+          </div>
+          <div class = "design-title">
+            <a href = "#">make an awesome art portfolio for college or university</a>
+          </div>
+        </div>
+        <!-- end of item -->
+      </div>
+    </div>
+  </section>
+  <!-- end of design -->
+
+
+  <!-- blog -->
+  <section class = "blog" id = "blog">
+    <div class = "container">
+      <div class = "title">
+        <h2>Latest Blog</h2>
+      </div>
+      <div class = "blog-content">
+        <!-- item -->
+        <div class = "blog-item">
+          <div class = "blog-img">
+            <img src = "../css/assets/blog-p-1.jpg" alt = "">
+            <span><i class = "far fa-heart"></i></span>
+          </div>
+          <div class = "blog-text">
+            <span>20 January, 2020</span>
+            <h2>Lorem ipsum, dolor sit amet consectetur adipisicing</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis libero quas ipsum laudantium nihil! Quaerat.</p>
+            <a href = "#">Read More</a>
+          </div>
+        </div>
+        <!-- end of item -->
+        <!-- item -->
+        <div class = "blog-item">
+          <div class = "blog-img">
+            <img src = "../css/assets/blog-p-2.jpg" alt = "">
+            <span><i class = "far fa-heart"></i></span>
+          </div>
+          <div class = "blog-text">
+            <span>20 January, 2020</span>
+            <h2>Lorem ipsum, dolor sit amet consectetur adipisicing</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis libero quas ipsum laudantium nihil! Quaerat.</p>
+            <a href = "#">Read More</a>
+          </div>
+        </div>
+        <!-- end of item -->
+        <!-- item -->
+        <div class = "blog-item">
+          <div class = "blog-img">
+            <img src = "../css/assets/blog-p-3.jpg" alt = "">
+            <span><i class = "far fa-heart"></i></span>
+          </div>
+          <div class = "blog-text">
+            <span>20 January, 2020</span>
+            <h2>Lorem ipsum, dolor sit amet consectetur adipisicing</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis libero quas ipsum laudantium nihil! Quaerat.</p>
+            <a href = "#">Read More</a>
+          </div>
+        </div>
+        <!-- end of item -->
+        <!-- item -->
+        <div class = "blog-item">
+          <div class = "blog-img">
+            <img src = "../css/assets/blog-p-4.jpg" alt = "">
+            <span><i class = "far fa-heart"></i></span>
+          </div>
+          <div class = "blog-text">
+            <span>20 January, 2020</span>
+            <h2>Lorem ipsum, dolor sit amet consectetur adipisicing</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis libero quas ipsum laudantium nihil! Quaerat.</p>
+            <a href = "#">Read More</a>
+          </div>
+        </div>
+        <!-- end of item -->
+        <!-- item -->
+        <div class = "blog-item">
+          <div class = "blog-img">
+            <img src = "../css/assets/blog-p-5.jpg" alt = "">
+            <span><i class = "far fa-heart"></i></span>
+          </div>
+          <div class = "blog-text">
+            <span>20 January, 2020</span>
+            <h2>Lorem ipsum, dolor sit amet consectetur adipisicing</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis libero quas ipsum laudantium nihil! Quaerat.</p>
+            <a href = "#">Read More</a>
+          </div>
+        </div>
+        <!-- end of item -->
+        <!-- item -->
+        <div class = "blog-item">
+          <div class = "blog-img">
+            <img src = "../css/assets/blog-p-6.jpg" alt = "">
+            <span><i class = "far fa-heart"></i></span>
+          </div>
+          <div class = "blog-text">
+            <span>20 January, 2020</span>
+            <h2>Lorem ipsum, dolor sit amet consectetur adipisicing</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis libero quas ipsum laudantium nihil! Quaerat.</p>
+            <a href = "#">Read More</a>
+          </div>
+        </div>
+        <!-- end of item -->
+      </div>
+    </div>
+  </section>
+  <!-- end of blog -->
+
 </body>
 </html>
