--- a/html/blog.html
+++ b/html/blog.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Blog|nephelometer</title>
+  <script
+      src="https://kit.fontawesome.com/a64131ba24.js"
+      crossorigin="anonymous"
+    ></script>
   <link rel="stylesheet" href="../css/blog.css">
 
 </head>
@@ -13,7 +17,9 @@
       <div class = "container">
         <a href = "../index.html" class = "navbar-brand">nephelometer</a>
         <div class = "navbar-nav">
-          
+          <button class="btn__user btn">
+            <span><i class="fa-solid fa-plus"></i></span> Post
+           </button>
         </div>
       </div>
     </nav>
@@ -23,7 +29,12 @@
           nephelometer
         </h1>
         <p>everything that you want to know about your next destination</p>
-        
+        <form>
+          <input type = "text" class = "search-input" placeholder="find your destination . . .">
+          <button type = "submit" class = "search-btn">
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </button>
+        </form>
       </div>
     </div>
   </header>
@@ -42,10 +53,10 @@
           <div class = "design-img">
             <img src = "../css/assets/art-design-1.jpg" alt = "">
             <span><i class = "far fa-heart"></i> 22</span>
-            <span>Art & Design</span>
+            <span>nephelometer</span>
           </div>
           <div class = "design-title">
-            <a href = "#">make an awesome art portfolio for college or university</a>
+            <a href = "#">Lorem ipsum, dolor sit amet consectetur adipisicing</a>
           </div>
         </div>
         <!-- end of item -->
@@ -54,10 +65,10 @@
           <div class = "design-img">
             <img src = "../css/assets/art-design-2.jpg" alt = "">
             <span><i class = "far fa-heart"></i> 22</span>
-            <span>Art & Design</span>
+            <span>nephelometer</span>
           </div>
           <div class = "design-title">
-            <a href = "#">make an awesome art portfolio for college or university</a>
+            <a href = "#">Lorem ipsum, dolor sit amet consectetur adipisicing</a>
           </div>
         </div>
         <!-- end of item -->
@@ -66,10 +77,10 @@
           <div class = "design-img">
             <img src = "../css/assets/art-design-3.jpg" alt = "">
             <span><i class = "far fa-heart"></i> 22</span>
-            <span>Art & Design</span>
+            <span>nephelometer</span>
           </div>
           <div class = "design-title">
-            <a href = "#">make an awesome art portfolio for college or university</a>
+            <a href = "#">Lorem ipsum, dolor sit amet consectetur adipisicing</a>
           </div>
         </div>
         <!-- end of item -->
@@ -78,10 +89,10 @@
           <div class = "design-img">
             <img src = "../css/assets/art-design-4.jpg" alt = "">
             <span><i class = "far fa-heart"></i> 22</span>
-            <span>Art & Design</span>
+            <span>nephelometer</span>
           </div>
           <div class = "design-title">
-            <a href = "#">make an awesome art portfolio for college or university</a>
+            <a href = "#">Lorem ipsum, dolor sit amet consectetur adipisicing</a>
           </div>
         </div>
         <!-- end of item -->
@@ -90,10 +101,10 @@
           <div class = "design-img">
             <img src = "../css/assets/art-design-5.jpg" alt = "">
             <span><i class = "far fa-heart"></i> 22</span>
-            <span>Art & Design</span>
+            <span>nephelometer</span>
           </div>
           <div class = "design-title">
-            <a href = "#">make an awesome art portfolio for college or university</a>
+            <a href = "#">Lorem ipsum, dolor sit amet consectetur adipisicing</a>
           </div>
         </div>
         <!-- end of item -->
@@ -102,10 +113,10 @@
           <div class = "design-img">
             <img src = "../css/assets/art-design-6.jpg" alt = "">
             <span><i class = "far fa-heart"></i> 22</span>
-            <span>Art & Design</span>
+            <span>nephelometer</span>
           </div>
           <div class = "design-title">
-            <a href = "#">make an awesome art portfolio for college or university</a>
+            <a href = "#">Lorem ipsum, dolor sit amet consectetur adipisicing</a>
           </div>
         </div>
         <!-- end of item -->
