--- a/html/register.html
+++ b/html/register.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Register</title>
+    <title>Register|nephelometer</title>
     
     <script
       src="https://kit.fontawesome.com/a64131ba24.js"
@@ -34,12 +34,12 @@
           <form id="loginForm">
             <div class="input-box">
               <span class="icon"><i class="fa-solid fa-envelope"></i></span>
-              <input type="email" id="email" name="email" required/>
+              <input type="email" id="email" name="email"/>
               <label>Email</label>
             </div>
             <div class="input-box">
               <span class="icon"><i class="fa-solid fa-lock"></i></span>
-              <input type="password" id="password" name="password" required />
+              <input type="password" id="password" name="password" />
               <label>Password</label>
             </div>
             <div class="remember-forgot">
@@ -62,22 +62,22 @@
           <form id="registerForm">
             <div class="input-box">
               <span class="icon"><i class="fa-solid fa-user"></i></span>
-              <input type="text" id="username" name="username" required/>
+              <input type="text" id="username" name="username"/>
               <label>Username</label>
             </div>
             <div class="input-box">
               <span class="icon"><i class="fa-solid fa-envelope"></i></span>
-              <input type="email" id="email" name="email" required/>
+              <input type="email" id="email" name="email"/>
               <label>Email</label>
             </div>
             <div class="input-box">
               <span class="icon"><i class="fa-solid fa-lock"></i></span>
-              <input type="password" id="password" name="password" required/>
+              <input type="password" id="password" name="password"/>
               <label>Password</label>
             </div>
             <div class="remember-forgot">
               <label
-                ><input type="checkbox" id="terms" name="terms" required/> I accepted the terms &
+                ><input type="checkbox" id="terms" name="terms"/> I accepted the terms &
                 conditions</label
               >
             </div>
