--- a/html/register.html
+++ b/html/register.html
@@ -27,7 +27,7 @@
     </nav>
 
     <div class="wrapper-p">
-      <div class="wrapper">
+      <div class="wrapper active-popup">
         <span class="icon-close"><i class="fa-solid fa-xmark"></i></span>
         <div class="form-box login">
           <h2>Login</h2>
