--- a/html/blog.html
+++ b/html/blog.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="../css/index.css">
   <link rel="stylesheet" href="../css/blog.css">
 
 </head>
@@ -33,7 +34,7 @@
   <section class = "design" id = "design">
     <div class = "container">
       <div class = "title">
-        <h2>Recent Blogs</h2>
+        <h2>Categories</h2>
       </div>
 
       <div class = "design-content">
@@ -132,7 +133,7 @@
             <span>20 January, 2020</span>
             <h2>Lorem ipsum, dolor sit amet consectetur adipisicing</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis libero quas ipsum laudantium nihil! Quaerat.</p>
-            <a href = "#">Read More</a>
+            <a href = "./postDetail.html">Read More</a>
           </div>
         </div>
         <!-- end of item -->
@@ -211,5 +212,38 @@
   </section>
   <!-- end of blog -->
 
+  <section class="footer" id="footer">
+    <footer class="footer">
+      <div class="section__container footer__container">
+        <div class="footer__col">
+          <div class="logo footer__logo">
+            <a href="#">nephelometer</a>
+          </div>
+          <p>Get out there & discover your next destination!</p>
+        </div>
+        <div class="footer__col">
+          <h4>More on The Blog</h4>
+          <ul class="footer__links">
+            <li><a href="#">About The Creator</a></li>
+            <li><a href="#">Contributors & Writers</a></li>
+            <li><a href="#">Write For Us</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+          </ul>
+        </div>
+        <div class="footer__col">
+          <h4>More on nephelometer</h4>
+          <ul class="footer__links">
+            <li><a href="#">The Team</a></li>
+            <li><a href="#">Jobs</a></li>
+            <li><a href="#">Press</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer__bar">
+        Copyright © 2024 Le Minh Tien. All rights reserved.
+      </div>
+    </footer>
+  </section>
 </body>
 </html>
