--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
     />
+
+    <link rel="stylesheet" href="./css/nav.css" />
     <link rel="stylesheet" href="./css/index.css" />
-    <link rel="stylesheet" href="../css/index.css" />
-    <link rel="stylesheet" href="../css/blog.css" />
-    <link rel="stylesheet" href="../css/postDetail.css" />
-    <link rel="stylesheet" href="../css/register.css" />
-    <link rel="stylesheet" href="../css/account.css" />
+    <link rel="stylesheet" href="./css/blog.css" />
+    <link rel="stylesheet" href="./css/postDetail.css" />
+    <link rel="stylesheet" href="./css/register.css" />
+    <link rel="stylesheet" href="./css/account.css" />
+    <link rel="stylesheet" href="./css/footer.css">
   </head>
   <body id= "app">
     <script type="module" src="./app.js"></script>
